--- a/css/search-bar.css
+++ b/css/search-bar.css
@@ -1,6 +1,8 @@
 ::placeholder {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: #cccccc;
+  font-weight: 300;
+
   opacity: 1; /* Firefox */
 }
 
