--- a/css/header.css
+++ b/css/header.css
@@ -5,7 +5,11 @@
   position: fixed;
   width: 100%;
   top: 0px;
-  z-index: 1;
+  z-index: 2;
+}
+
+.top-header a {
+  color: white;
 }
 
 .top-header .header__top,
