--- a/css/chats.css
+++ b/css/chats.css
@@ -58,7 +58,15 @@
   position: fixed;
   right: 20px;
   bottom: 80px;
-  font-size: 25px;
+  font-size: 20px;
   color: #523737;
-  box-shadow: 0 3px 20px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  transition: color 0.3s, background 0.3s, transform 0.5s ease-in-out;
+}
+
+.chat__btn:hover {
+  color: white;
+  background-color: #523737;
+  transform: rotate(360deg);
 }
