--- a/css/friends.css
+++ b/css/friends.css
@@ -29,6 +29,30 @@
   width: 40px;
   border-radius: 50px;
   margin-right: 15px;
+  animation: 1s rotateFriend /*infinite*/ ease-in-out;
+}
+
+/*
+@keyframes rotateFriend {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(360deg);
+  }
+}
+*/
+
+@keyframes rotateFriend {
+  0% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(180deg) scale(0.5);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
 }
 
 .friends_section-column {
